2008-02-11  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in (PokerAvatarTestCase.sitTable):
	Removed extraneous prints.
	(PokerAvatarTestCase.test10_explainFailsOnceAtTable): Wrote
	function.
	(PokerAvatarTestCase.forceExplain): Wrote function.
	(PokerAvatarTestCase.test11_loginWithPasswordTooLong): Wrote
	function.
	(PokerAvatarTestCase.loginWithPasswordTooLong): Wrote function.

2008-02-10  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.test05_testStrInterpolation): Callback function
	should return (client, packet).
	(PokerAvatarTestCase.test07_getImage): Wrote function.
	(PokerAvatarTestCase.test06_5_setRolesIsAnErrorWhenDoneAfterLogin):
	Wrote function.
	(PokerAvatarTestCase.test06_setRoles): Roles must be set before login.
	(PokerAvatarTestCase.test06_setRoles.setRoles): should not
	try/catch error as test following it does.
	(PokerAvatarTestCase.test08_joinTable): Wrote function.
	(PokerAvatarTestCase.joinTable): Wrote helper function.
	(PokerAvatarTestCase.test09_sitTable): Wrote function.
	(PokerAvatarTestCase.sitTable): Wrote helper function.

2008-02-09  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.test04_createTable): Wrote function.
	(PokerAvatarTestCase.test05_testStrInterpolation): Wrote funciton.
	(PokerAvatarTestCase.test04_createTable.handleTable): Wrote function.

	* pokernetwork/pokeravatar.py (PokerAvatar.__str__): Fixed bug;
	stringification shouldn't have a print in it.

2008-02-02  Bradley M. Kuhn  <bkuhn@ebb.org>

	* Release 1.3.0

	* tests/test-pokerdatabase.py.in
	(PokerDatabaseTestCase.tearDown): Added code to delete the test user.
	(Run): Used VerboseTextReporter instead of regular TextReporter.
	(PokerDatabaseTestCase.test04_rootBothUsers): Added catch for
	exception when it attempts to recreate the root user.
	(PokerDatabaseTestCase.setUp): Added a tearDown() call just in
	case cruft is left around.